fix: remove outside gap in .row class (#5) (#7)
* Remove outside row gap!

Align to external container.

* Update grid.scss

--- a/src/core/grid.scss
+++ b/src/core/grid.scss
@@ -7,7 +7,6 @@
 $gutter-width: 8px;
 $outer-margin: 24px;
 $half-gutter-width: $gutter-width * .5;
-$gutter-compensation: -$half-gutter-width;
 
 /* Extra small screen / Mobile */
 $screen-xs     : 480px;
@@ -60,8 +59,8 @@ $baseWidth: 4.166667%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  // margin-left: $gutter-compensation;
-  // margin-right: $gutter-compensation;
+  margin-left: $half-gutter-width * -1;
+  margin-right: $half-gutter-width * -1;
 
   &.reverse {
     flex-direction: row-reverse;
